--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.0.0",
+    "multer": "^2.0.2",
     "nodemon": "^3.1.10"
   }
 }
